--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "@ksoft/api": "^3.1.9",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
     "better-erela.js-spotify": "^1.3.6",
     "canvacord": "^5.2.3",
     "chalk": "^4.1.2",
@@ -37,7 +37,7 @@
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.6.0",
     "duckduckgo-images-api": "^1.0.5",
-    "erela.js": "^2.3.3",
+    "erela.js": "github:menudocs/erela.js#build",
     "erela.js-deezer": "^1.0.7",
     "erela.js-facebook": "^1.0.4",
     "erela.js-spotify": "^1.2.0",
