--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@discordjs/builders": "^0.12.0",
 		"@discordjs/rest": "^0.3.0",
 		"axios": "^0.26.1",
+		"bandcamp-scraper": "^1.5.0",
 		"better-erela.js-spotify": "^1.3.6",
 		"chalk": "^4.1.2",
 		"dateformat": "^5.0.3",
